<resources>
    <string name="app_name">KHC</string>
    <string name="version">${project.version}</string>
    <string name="build_number">${buildNumber}</string>
    <string name="health_communicator_version">${project.version}</string>
    <string name="gcm_sender_id">960033244694</string>
    <string name="package_to_open">com.kurento.android.sdk.communicator.gui</string>
    <string name="class_to_open">com.kurento.android.sdk.communicator.gui.ui.activity.TimelineListActivity</string>
    <string name="account_needed">You need an app account ID to access&#8230;</string>
    <string name="account_ok">Ok</string>
    <string name="account_tittle">Select account</string>
    <string name="re_sync_title">Sync app</string>
    <string name="re_sync_text">This proccess resync you app, use it only if you have some problems with the app</string>
    <string name="re_sync_ok">Sync</string>
    <string name="re_sync_cancel">Cancel</string>
    <string name="re_sync_error">Error in sync process</string>
    <string name="get_contacts_title">Get contacts</string>
    <string name="get_contacts_text">Find users that you have on your device?</string>
    <string name="get_contacts_ok">Yes</string>
    <string name="get_contacts_cancel">Cancel</string>
    <string name="main_button_take_picture">Take photo</string>
    <string name="main_button_record_video">Record video</string>
    <string name="main_button_gsm_call">Call</string>
    <string name="main_select_account">Select a Group</string>
    <string name="main_no_account_error_message">An account is needed to run the app</string>
    <string name="loading_data">Download the data could take some time, but if this process takes more than 5 minutes, please retry it later.</string>
    <string name="sync_tittle">Synchronize user</string>
    <string name="sync_text">This process could take some time the first time&#8230;</string>
    <string name="sync">Synchronize&#8230;</string>
    <string name="preferences_sync">Sync app</string>
    <string name="preferences_account">Find users</string>
    <string name="log">Log</string>
    <string name="upload_preview_description">Preview</string>
    <string name="upload_description">Description</string>
    <string name="upload_button_upload">Upload</string>
    <string name="cancel_button">Cancel</string>
    <string name="uploading_media">Uploading&#8230;</string>
    <string name="upload_fail">Upload fail</string>
    <string name="upload_ok">Done!</string>
    <string name="upload_offline">No connection&#8230;</string>
    <string name="add_timeline">Add timeline</string>
    <string name="delete_timeline">Delete timeline</string>
    <string name="agenda_menu">Agenda</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_messages">Actually there are no messages, please try it later.</string>
    <string name="refresh">Refresh</string>
    <string name="donwload_fail">Downloading error&#8230;</string>
    <string name="reply">Reply this message</string>
    <string name="no_refresh_messages">There are no more messages.</string>
    <string name="timeline_no_enabled">You are not a member of this group, you cannot send messages.</string>
    <string name="from_layer_string">From:</string>
    <string name="to_layer_string">To:</string>
    <string name="timestamp_layer_string">Date:</string>
    <string name="body_layer_string">Message:</string>
    <string name="send_ack_message">Are you sure you want to acknowledge this task?</string>
    <string name="send_ack_yes">Yes</string>
    <string name="send_ack_no">No</string>
    <string name="loading_media">Loading&#8230;</string>
    <string name="select_media">Select media</string>
    <string name="popup_camera">Picture</string>
    <string name="popup_vidio">Video</string>
    <string name="popup_gallery">Gallery</string>
    <string name="no_media">No media to show</string>
    <string name="media_attach">Media attached to send</string>
    <string name="popup_call">Phone Call</string>
    <string name="popup_video_call">Video Call</string>
    <string name="msg_sending">Sending</string>
    <string name="msg_sent">Sent</string>
    <string name="msg_received">Received</string>
    <string name="msg_new">New</string>
    <string name="msg_readed">Readed</string>
    <string name="new_message_timeline">(New messages)</string>
    <string name="test_activity_header">Massive Test</string>
    <string name="test_message">Testing </string>
    <string name="message_for_testing">kurento666</string>
    <string name="account_preferences">Account preferencecs</string>
    <string name="account_preferences_edit_account">Edit account</string>
    <string name="account_preferences_edit_account_summary">Edit your profile</string>
    <string name="login_activity_username_hint">Email</string>
    <string name="login_activity_login_btn">Log in</string>
    <string name="login_activity_register_btn">Don\'t have an account? sign up!</string>
    <string name="login_activity_recovery_btn">Recovery password</string>
    <string name="login_activity_fail_bad_username">Please enter a valid username</string>
    <string name="login_activity_invalid_credentials">Invalid credentials</string>
    <string name="login_activity_login_fail">Login Failed! don\'t remember password? recover it here&#8230;</string>
    <string name="login_activity_fail_bad_passwd">Please enter a valid password</string>
    <string name="login_activity_password_hint">Password</string>
    <string name="login_activity_logging_in">Logging in</string>
    <string name="login_activity_checking_account">Checking server</string>
    <string name="please_wait">Please wait</string>
    <string name="please_wait_login">Please wait, login could take some time&#8230;</string>
    <string name="edit_user_activity_username">Username</string>
    <string name="edit_user_activity_password">Change password</string>
    <string name="edit_user_activity_repeat_password">Repeat password</string>
    <string name="edit_user_activity_fullname">FullName</string>
    <string name="edit_user_activity_name">Name</string>
    <string name="edit_user_activity_phone">Phone</string>
    <string name="edit_user_activity_surname">Surname</string>
    <string name="edit_user_activity_email">E-mail</string>
    <string name="edit_user_activity_email_no_editable">E-mail (No editable)</string>
    <string name="edit_user_activity_nickname">NickName</string>
    <string name="edit_user_activity_upload">Upload</string>
    <string name="edit_user_activity_telephone">Telephone</string>
    <string name="edit_user_activity_contact_picture">Contact picture</string>
    <string name="edit_user_activity_enter_all">Please, enter all data</string>
    <string name="edit_user_activity_enter_username">Please, enter a username</string>
    <string name="edit_user_activity_enter_password">Please, enter a password</string>
    <string name="edit_user_activity_enter_password_repeat">Please, repeat password</string>
    <string name="edit_user_activity_password_not_match">Password not match</string>
    <string name="edit_user_activity_enter_email">Please, enter a valid e-mail</string>
    <string name="edit_user_activity_error_updating_user">Unexpected error updating user information</string>
    <string name="edit_user_activity_getting_user_data">Getting user data</string>
    <string name="edit_user_activity_sending_user_data">Sending user data</string>
    <string name="edit_user_activity_cannot_get_account_data">Cannot get data for user %1$s</string>
    <string name="auth_fail">Login fail, please check out your notifications to login again</string>
    <string name="account_register_success">Register account completed</string>
    <string name="account_update_success">Update account completed</string>
    <string name="account_update_fail">Update account fail</string>
    <string name="message_upload_no_permission">No permission to upload the message, message was deleted&#8230;</string>
    <string name="create_user_button">Create user</string>
    <string name="create_user_fail">Create user fail</string>
    <string name="error_capturing_media">Error tryng to get media&#8230;</string>
    <string name="error_email_registered">Email is already registered&#8230;</string>
    <string name="error_phone_registered">Phone is already registered&#8230;</string>
    <string name="error_invalid_phone">Invalid phone number&#8230;</string>
    <string name="error_unexpected">Unexpected error</string>
    <string name="main_menu_select_account">Select account</string>
    <string name="main_menu_preferences">Preferences</string>
    <string name="preference_server_protocol">Server protocol</string>
    <string name="preference_server_address">Server address</string>
    <string name="preference_server_account">Account</string>
    <string name="preference_server_port">Server port</string>
    <string name="set_notification">Retrieve notifications with sounds</string>
    <string name="max_messages">Max number of message in memory</string>
    <string name="media_total_size">Content storage size (MB)</string>
    <string name="init_call_with_video">Init with video</string>
    <string name="init_video_summary_on">Call starts with video enabled</string>
    <string name="init_video_summary_off">Call starts with video disabled</string>
    <string name="default_camera">Default camera</string>
    <string name="front_camera">Front</string>
    <string name="back_camera">Back</string>
    <string name="none_camera">No camera</string>
    <string name="stun_enable">Enable Stun</string>
    <string name="stun_address">Stun address</string>
    <string name="stun_port">Stun port</string>
    <string name="stun_user">Stun user</string>
    <string name="stun_password">Stun password</string>
    <string name="turn_enable">Enable Turn</string>
    <string name="turn_address">Turn address</string>
    <string name="turn_port">Turn port</string>
    <string name="turn_user">Turn user</string>
    <string name="turn_password">Turn password</string>
    <string name="preferences_version">Version</string>
    <string name="preferences_build_number">Build number</string>
    <string name="notification_body">Checkout your messages</string>
    <string name="notification_title_single">message</string>
    <string name="notification_title_plural">messages</string>
    <string name="notification_title_from">from</string>
    <string name="notification_dots">...</string>
    <string name="notification_more_messages">more</string>
    <string name="notification_new_messages">new</string>
    <string name="email_or_name">E-mail/Username</string>
    <string name="code">Recovery code</string>
    <string name="send_request">Request code</string>
    <string name="send_code">Send Code</string>
    <string name="empty_code">Please write a correct recovery code</string>
    <string name="requesting_code">Requesting code&#8230;</string>
    <string name="sending_code">Sending code&#8230;</string>
    <string name="password_update">Password updated</string>
    <string name="password_update_fail">Password updated failure, please try again</string>
    <string name="recovery_help">* Please enter your registration Email or Username and we will send you a recovery code to you Email. When you have the code please paste it down here and click -Send code-</string>
    <string name="create">Create</string>
    <string name="create_dialog">Create new group</string>
    <string name="cancel_group">Cancel</string>
    <string name="group_name">Group name</string>
    <string name="group_phone">Group phone</string>
    <string name="test_plain_message">Number of plane messages</string>
    <string name="test_media_message">Number of media messages</string>
    <string name="delay_message">Send messages delay (ms)</string>
    <string name="btn_send_text">Send</string>
</resources>