<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dip"
    android:paddingRight="16dip"
    android:paddingTop="16dip" >

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:paddingBottom="16dip"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/error_message"
        android:gravity="right"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_activity_username_hint" />

            <EditText
                android:id="@+id/email_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:text="" />

            <Button
                android:id="@+id/get_code_button"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/send_request" />

            <TextView
                android:id="@+id/help_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dip"
                android:text="@string/recovery_help" />

            <EditText
                android:id="@+id/code_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/code"
                android:inputType="number"
                android:singleLine="true"
                android:text="" />

            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_user_activity_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text="" />

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_user_activity_repeat_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text="" />

            <Button
                android:id="@+id/send_code_button"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/send_code" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>