<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:drawable/picture_frame"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dip" >

    <RelativeLayout
        android:layout_width="270dip"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="270dip"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="8dip"
            android:layout_marginTop="8dip"
            android:paddingLeft="16dip"
            android:text="@string/account_tittle"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18dip"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/qr_button"
            android:layout_width="36dip"
            android:layout_height="36dip"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dip"
            android:paddingRight="16dip"
            android:src="@drawable/ic_qr"
            android:visibility="gone" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="270dip"
        android:layout_height="3dip"
        android:layout_gravity="center"
        android:layout_marginBottom="8dip"
        android:layout_marginTop="4dip"
        android:background="@android:color/holo_blue_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dip"
        android:paddingRight="16dip"
        android:paddingTop="8dip"
        android:text="@string/account_needed"
        android:textSize="16dip" />

    <EditText
        android:id="@+id/account_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/preference_server_account"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/account_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dip"
        android:text="@string/account_ok" />

</LinearLayout>