<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/bg_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:alpha="0.3" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="80dip"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:paddingTop="16dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dip" >

                    <ImageView
                        android:id="@+id/contact_image_bg"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="#ffffff" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="90dp"
                        android:layout_height="90dp" />

                    <ImageView
                        android:id="@+id/contact_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/edit_user_activity_contact_picture"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_contact_picture" />

                    <TextView
                        android:id="@+id/fullname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/contact_image"
                        android:paddingLeft="8dip"
                        android:text="@string/edit_user_activity_fullname" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fullname"
                        android:layout_toRightOf="@id/contact_image"
                        android:orientation="vertical"
                        android:paddingLeft="8dip" >

                        <EditText
                            android:id="@+id/name_txt"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/edit_user_activity_name"
                            android:singleLine="true" >
                        </EditText>

                        <EditText
                            android:id="@+id/surname_txt"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/edit_user_activity_surname"
                            android:singleLine="true" >
                        </EditText>
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dip"
                    android:text="@string/edit_user_activity_email" />

                <EditText
                    android:id="@+id/email_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/edit_user_activity_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="false"
                    android:text="" />

                <TextView
                    android:id="@+id/telephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dip"
                    android:text="@string/edit_user_activity_telephone" />

                <EditText
                    android:id="@+id/phone_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_user_activity_telephone"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:text="" />

                <Button
                    android:id="@+id/password_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dip"
                    android:text="@string/edit_user_activity_password" />

                <LinearLayout
                    android:id="@+id/password_layer"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <TextView
                        android:id="@+id/password_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dip"
                        android:text="@string/edit_user_activity_password" />

                    <EditText
                        android:id="@+id/password_1_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_user_activity_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="" />

                    <TextView
                        android:id="@+id/password_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dip"
                        android:text="@string/edit_user_activity_repeat_password" />

                    <EditText
                        android:id="@+id/password_2_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_user_activity_repeat_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/error_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#66000000"
        android:padding="8dip"
        android:textColor="#ffffff"
        android:textSize="15dip"
        android:textStyle="bold"
        android:visibility="gone" />

</RelativeLayout>